omnitron-rpc/tests/compile_fail/tarpc_service_arg_pat.rs
#[omnitron_rpc::service]
trait World {
    async fn pat((a, b): (u8, u32));
}

fn main() {}
